# llm-gateway

./: Cargo.toml  README.md  config.yaml
scripts/: zig-ar.sh  zig-cc.sh
specs/: anthropic models端点消息格式.md  anthropic消息格式.md  instructions.md  openai兼容格式.md
specs/data/: audit_log.md
specs/workspace/: 0001-spec.md  0002-implementation-plan.md  0003-models-proxy-design.md  0004-passthrough-plan.md
src/: audit_log.rs  config.rs  error.rs  handlers.rs  main.rs  metrics.rs  models.rs  state.rs  streaming.rs  tracing_otlp.rs  translate.rs
