[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
futures-util = "0.3.31"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics", "grpc-tonic", "trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["experimental_async_runtime", "experimental_metrics_periodicreader_with_async_runtime", "experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1.18"
tonic = "0.14.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"

[dev-dependencies]
hyper = "1.8.1"
http-body-util = "0.1.3"
